# mmpengine_basic_samples

./: .gitignore  .gitmodules  CMakeLists.txt
src/samples/: MainTemplate.hpp
src/samples/Boxes/: App.cpp  App.hpp  Main.cpp  TestShader.h
src/samples/Boxes/shaders/: Boxes.json  Pixel_Test.hlsl  Pixel_Test.json  Pixel_Test.metal  Vertex_Test.hlsl  Vertex_Test.json  Vertex_Test.metal  Vertex_Test.vert  Vertex_Test.vert.glsl
src/samples/Buffers/: App.cpp  App.hpp  Main.cpp
src/samples/Compute/: App.cpp  App.hpp  Main.cpp
src/samples/Compute/shaders/: Compute.json  ComputeShaderThreadId.json  Compute_Filter.hlsl  Compute_Filter.json  Compute_Filter_Negative.comp  Compute_Filter_Negative.hlsl  Compute_Filter_Negative.json  Compute_Filter_Negative.metal  Compute_Filter_Positive.comp.glsl  Compute_Filter_Positive.json  Compute_Filter_Positive.metal  Compute_SetThreadId.hlsl  Compute_SetThreadId.json  Compute_SetValue.comp  Compute_SetValue.comp.glsl  Compute_SetValue.hlsl  Compute_SetValue.json  Compute_SetValue.metal
src/samples/Cube/: App.cpp  App.hpp  Main.cpp
src/samples/Empty/: App.cpp  App.hpp  Main.cpp
src/samples/Primitives/: App.cpp  App.hpp  Main.cpp  TestShader.h
src/samples/Primitives/shaders/: Pixel_Test.frag  Primitives.json  PrimitivesBindings.json  Vertex_Test.hlsl  Vertex_Test.metal  Vertex_Test.vert
